# Transform-EMR-Decoder

./: .gitignore  CITATION.cff  README.md  analysis.ipynb  api.py  evaluation.ipynb  evaluation.py  prepare.py  program.md  pyproject.toml  pyrightconfig.json  results.tsv  setup.py  status.md  train.py
data/: generate_synthetic_data.ipynb
emr_model/: README.md  requirements.txt  setup.py
emr_model/transform_emr/: __init__.py  dataset.py  debug_tools.py  diagnose.py  embedder.py  inference.py  loss.py  schedulers.py  train.py  transformer.py  utils.py
emr_model/transform_emr/config/: __init__.py  dataset_config.py  model_config.py  tak-repo-portable.json
intervene_ar/: __init__.py  dataset.py  diagnose.py  embedder.py  inference.py  loss.py  schedulers.py  train.py  transformer.py  utils.py
intervene_ar/config/: __init__.py  dataset_config.py  model_config.py
results/: per_outcome_ada9e3f.tsv  per_outcome_c1c87e0_full.tsv  per_outcome_c1c87e0_n2000.tsv  results-trajectory-fix.tsv
results/_legacy/: results-architecture optimization.tsv  results-hyperparameters sweep.tsv
tests/: test_dataset.py  test_embedder.py  test_transformer.py  test_utils.py
transform_emr/: __init__.py  dataset.py  debug_tools.py  diagnose.py  embedder.py  evaluation.ipynb  evaluation.py  inference.py  loss.py  schedulers.py  train.py  transformer.py  utils.py
transform_emr/config/: __init__.py  dataset_config.py  model_config.py
unittests/: test_dataset.py  test_embedder.py  test_inference.py  test_transformer.py  test_utils.py
