[project]
name = "autoresearch-emr"
version = "0.1.0"
description = "Autonomous research on EMR event-prediction models"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0",
    "matplotlib>=3.7.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    "tqdm>=4.65.0",
    "openpyxl>=3.1.0",
    "joblib>=1.3.0",
]

# If you are on a CUDA machine, install PyTorch from the CUDA wheel index.
# Replace cu128 with your CUDA version (e.g. cu118, cu121).
# Comment out this section entirely to use a CPU-only install.
[tool.uv.sources]
torch = [
    { index = "pytorch-cu128" },
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
