[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "intervene_ar"
version = "0.1"
requires-python = ">=3.10"
dependencies = [
    "pandas",
    "numpy", 
    "torch>=2.0.0",
    "scikit-learn",
    "matplotlib>=3.7.0",
    "tqdm",
    "pytest",
    "pytest-order",
    "openpyxl"
]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning:matplotlib.*",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["intervene_ar*"]